# scribble

./: .gitignore  README.md  pyproject.toml
docs/: hippo_int.md
scripts/: test.py  velocyto.sh
src/: cli.py  import_data.py  impot_data.py  scribble.py
src/scribble/: annotate.py  cli.py  cluster.py  dbl_qc.py  evaluate.py  filter.py  harmony.py  import_data.py  map.py  mt_qc.py  pca_qc.py  plots.py  preintegration.py  refine.py
src/scribble.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
